k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pangpuriye6
  namespace: develop
  labels:
    app: pangpuriye6
    env: develop
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size:       "1m"
    nginx.ingress.kubernetes.io/proxy-read-timeout:    "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout:    "30"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: www.pangpuriye.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pangpuriye6
                port:
                  name: http
